vps/gateway/commercial/kubernetes/app-deployment-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-hhs-prod-apps

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhs-gateway-commercial-deployment
  namespace: ns-hhs-prod-apps
spec:
  replicas: 3
  revisionHistoryLimit: 2 # for roll-back, default to 10 if not specified
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: hhs-gateway-commercial
  template:
    metadata:
      labels:
        app: hhs-gateway-commercial
    spec:
      terminationGracePeriodSeconds: 10 # successfully wait termination
      securityContext:
        fsGroupChangePolicy: Always
        fsGroup: 1001
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
        - key: "pool"
          operator: "Equal"
          value: "application"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: agentpool
                    operator: In
                    values:
                      - appspool  # Node pool select
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: hhs-gateway-commercial
                topologyKey: kubernetes.io/hostname
      containers:
        - name: hhs-gateway-commercial-container
          image: ${IMAGE_NAME}:${BUILD_ID}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 1Gi
          ports:
            - name: http-web-app
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
            seccompProfile:
              type: "RuntimeDefault"
          volumeMounts:
            - name: tmpfs-folder
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /StartupCheck
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 40
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /LivenessCheck
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ReadinessCheck
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
      volumes:
        - name: tmpfs-folder
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
kind: Service
apiVersion: v1
metadata:
  name: hhs-gateway-commercial-svc
  namespace: ns-hhs-prod-apps
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 # ServicePort
      targetPort: 8080 # ContainerPort
  selector:
    app: hhs-gateway-commercial
