vps/gateway/commercial/kubernetes/app-ingress-uat.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhs-gateway-commercial-ingress
  namespace: ns-hhs-uat-apps
  labels:
    app.kubernetes.io/name: hhs-gateway-commercial #DEPLOYMENT_APP_LABEL
    app.kubernetes.io/instance: hhs-gateway-commercial
    app.kubernetes.io/component: "server"
    app.kubernetes.io/version: "latest"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-uat"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hhs-gateway-commercial-uat.techsummus.com
      secretName: hhs-gateway-commercial-uat.techsummus.com-tls # will be generated
  rules:
    - host: hhs-gateway-commercial-uat.techsummus.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hhs-gateway-commercial-svc
                port:
                  number: 80
